# AtlantisCmd

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yaml  docs-linkcheck.yaml  pytest-coverage.yaml  pytest-with-coverage.yaml  sphinx-linkcheck.yaml
atlantis_cmd/: __about__.py  __init__.py  main.py  run.py
cookiecutter/: README.md  cookiecutter.json
cookiecutter/hooks/: post_gen_project.py
cookiecutter/{{cookiecutter.tmp_run_dir}}/: Atlantis.sh
docs/: conf.py  index.rst  pkg_development.rst  subcommands.rst
docs/installation/: atlantis_cmd.rst  atlantis_code_dev.rst  index.rst
docs/run_description_file/: atlantis-example.yaml  index.rst  yaml_file.rst
envs/: atlantis-dev.yaml  environment-dev.yaml  environment-rtd.yaml  environment-test.yaml  requirements.txt
tests/: conftest.py  test_post_gen_project.py  test_run.py
