# Copyright 2021 – present by the Salish Sea Atlantis project contributors,
# The University of British Columbia, and CSIRO.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# SPDX-License-Identifier: Apache-2.0


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "AtlantisCmd"
dynamic = [ "version" ]
description = "Salish Sea CSIRO Atlantis ecosystem model command processor"
readme = "README.rst"
requires-python = ">=3.12"
license-files = [ "LICENSE" ]
authors = [
    {name = "Doug Latornell", email = "dlatornell@eoas.ubc.ca"},
]
keywords = ["automation", "oceanography", "ocean modelling", "UBC-MOAD"]
dependencies = [
    "arrow",
    "attrs",
    "cliff",
    "cookiecutter",
    "f90nml",
    "gitpython",
    "python-hglib",
    "pyyaml",
]

[project.urls]
"Documentation" = "https://atlantiscmd.readthedocs.io/en/latest/"
"Changelog" = "https://github.com/SS-Atlantis/AtlantisCmd/releases"
"Issue Tracker" = "https://github.com/SS-Atlantis/AtlantisCmd/issues"
"Source Code" = "https://github.com/SS-Atlantis/AtlantisCmd"

[project.scripts]
atlantis = "atlantis_cmd.main:main"

[project.entry-points."atlantis.app"]
gather = "nemo_cmd.gather:Gather"
run = "atlantis_cmd.run:Run"


[tool.coverage.run]
branch = true
source = ["atlantis_cmd", "tests"]

[tool.coverage.report]
show_missing = true
omit = [ ".pixi/*" ]

[tool.hatch.build.targets.wheel]
packages = ["atlantis_cmd"]

[tool.hatch.version]
path = "atlantis_cmd/__about__.py"


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
AtlantisCmd = { path = ".", editable = true }
nemo-cmd = { git = "https://github.com/SalishSeaCast/NEMO-Cmd.git" }
python-hglib = ">=2.6.2,<3"

[tool.pixi.tasks]

[tool.pixi.dependencies]
arrow = ">=1.4.0,<2"
attrs = ">=26.1.0,<27"
cliff = ">=4.13.2,<5"
cookiecutter = ">=2.7.1,<3"
f90nml = ">=1.5,<2"
gitpython = ">=3.1.46,<4"
pixi-pycharm = ">=0.0.11,<0.0.12"
python = "3.14.*"
pyyaml = ">=6.0.3,<7"

[tool.pixi.environments]
docs = { features = ["docs"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
test-py314 = ["py314", "test"]
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.feature.test.dependencies]
pytest = ">=9.0.2,<10"
pytest-cov = ">=7.1.0,<8"
pytest-randomly = ">=3.15.0,<4"

[tool.pixi.feature.test.tasks]
pytest = "pytest"
pytest-cov = "pytest --cov=./"
pytest-cov-html = "pytest --cov=./ --cov-report html"

[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.feature.docs.dependencies]
mock = ">=5.2.0,<6"
pillow = ">=12.1.1,<13"
sphinx = "8.1.3.*"
sphinx-rtd-theme = "3.0.0.*"

[tool.pixi.feature.docs.tasks]
docs = { cmd = "make clean html", cwd = "docs/" }
linkcheck = { cmd = "make clean linkcheck", cwd = "docs/" }

[tool.pixi.feature.dev.dependencies]
# For coding style, repo QA, and pkg management
black = ">=26.1.0,<27"
hatch = ">=1.16.5,<2"
pip = ">=26.0.1,<27"
pre-commit = ">=4.5.1,<5"
# For unit tests
pytest = ">=9.0.2,<10"
pytest-cov = ">=7.1.0,<8"
pytest-randomly = ">=3.15.0,<4"
# For documentation
sphinx = "8.1.3.*"
sphinx-rtd-theme = "3.0.0.*"

[tool.pixi.feature.dev.tasks]
update-reqs = "python -m pip list --format=freeze >> requirements.txt"

[dependency-groups]
docs = ["commonmark>=0.9.1,<0.10", "recommonmark>=0.7.1,<0.8", "readthedocs-sphinx-ext>=2.2.5,<3"]
